# rust-chip8

./: .gitignore  Cargo.toml  Makefile  README.md  chip8.rs  wasm-bindgen-macroquad.sh
.github/workflows/: rust.yml  wasm.yml
html/: index.html
src/: audio.rs  chip8.rs  color_map.rs  config.rs  display.rs  main.rs  square_wave.rs  util.rs
src/chip8/: mod.rs  quirks.rs  types.rs  util.rs
src/core/: error.rs  mod.rs  quirks.rs  types.rs  util.rs
src/tests/: chip8_tests.rs
