[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

[features]
default=["audio"]
audio = []

[profile.release]
lto = true

[dependencies]
macroquad = { version ="0.4.8", features = ["audio"]}
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
